feat: add minimal web client

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,60 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8" />
-<title>Webcam Client</title>
-<style>
-  body { font-family: sans-serif; text-align: center; }
-  #container { position: relative; display: inline-block; }
-  video, canvas { width: 320px; height: 240px; border: 1px solid #ccc; }
-  canvas { position: absolute; top: 0; left: 0; pointer-events: none; }
-</style>
+  <meta charset="utf-8" />
+  <title>Recon - Web Client</title>
+  <style>
+    body { font-family: sans-serif; text-align: center; }
+    video { width: 320px; height: 240px; border: 1px solid #ccc; }
+  </style>
 </head>
 <body>
-<div id="root"></div>
-<script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
-<script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@mediapipe/holistic/holistic.min.js"></script>
-<script type="text/javascript">
-const {useState, useEffect, useRef} = React;
+  <div id="root"></div>
+  <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
+  <script type="text/javascript">
+  const {useState, useRef, useEffect} = React;
 
-function App() {
-  const videoRef = useRef(null);
-  const canvasRef = useRef(null);
-  const socketRef = useRef(null);
-  const recorderRef = useRef(null);
-  const holisticRef = useRef(null);
-  const [transcript, setTranscript] = useState('');
-  const [showLms, setShowLms] = useState(false);
-  const [status, setStatus] = useState('Connecting...');
-  const [loading, setLoading] = useState(false);
-  const [error, setError] = useState('');
+  function App() {
+    const videoRef = useRef(null);
+    const socketRef = useRef(null);
+    const recorderRef = useRef(null);
+    const [transcript, setTranscript] = useState('');
+    const [status, setStatus] = useState('Connecting...');
+    const [loading, setLoading] = useState(false);
+    const [error, setError] = useState('');
 
-  useEffect(() => {
-    async function init() {
-      const stream = await navigator.mediaDevices.getUserMedia({video: true});
-      videoRef.current.srcObject = stream;
-
-      socketRef.current = new WebSocket('ws://' + location.hostname + ':8000/ws');
-      socketRef.current.onopen = () => {
-        setStatus('Connected');
-        setError('');
-      };
+    useEffect(() => {
+      // Connect to backend
+      const wsUrl = 'ws://' + location.hostname + ':8000/ws';
+      socketRef.current = new WebSocket(wsUrl);
+      socketRef.current.onopen = () => setStatus('Connected');
       socketRef.current.onclose = () => {
         setStatus('Disconnected');
-        setError('WebSocket disconnected');
         setLoading(false);
       };
-      socketRef.current.onerror = () => {
-        setError('WebSocket error');
-      };
+      socketRef.current.onerror = () => setError('WebSocket error');
       socketRef.current.onmessage = ev => {
         const data = JSON.parse(ev.data);
         setTranscript(data.transcript || '');
-        setLoading(false);
         if (data.error) setError(data.error); else setError('');
+        setLoading(false);
       };
+      return () => socketRef.current && socketRef.current.close();
+    }, []);
 
+    const setupRecorder = stream => {
       recorderRef.current = new MediaRecorder(stream, {mimeType: 'video/webm'});
       recorderRef.current.ondataavailable = ev => {
         if (ev.data.size > 0 && socketRef.current.readyState === 1) {
@@ -63,62 +52,46 @@ function App() {
         }
       };
       recorderRef.current.start(2000);
-
-      holisticRef.current = new Holistic({
-        locateFile: f => `https://cdn.jsdelivr.net/npm/@mediapipe/holistic/${f}`
-      });
-      holisticRef.current.setOptions({modelComplexity: 0});
-      holisticRef.current.onResults(res => {
-        if (!showLms) return;
-        const canvas = canvasRef.current;
-        const ctx = canvas.getContext('2d');
-        ctx.clearRect(0, 0, canvas.width, canvas.height);
-        const draw = lm => {
-          lm.forEach(p => {
-            ctx.beginPath();
-            ctx.arc(p.x * canvas.width, p.y * canvas.height, 2, 0, 2*Math.PI);
-            ctx.fill();
-          });
-        };
-        if (res.poseLandmarks) draw(res.poseLandmarks);
-        if (res.faceLandmarks) draw(res.faceLandmarks);
-        if (res.leftHandLandmarks) draw(res.leftHandLandmarks);
-        if (res.rightHandLandmarks) draw(res.rightHandLandmarks);
-      });
-
-      const process = async () => {
-        if (showLms) await holisticRef.current.send({image: videoRef.current});
-        requestAnimationFrame(process);
-      };
-      requestAnimationFrame(process);
-    }
-    init();
-    return () => {
-      if (recorderRef.current) recorderRef.current.stop();
-      if (socketRef.current) socketRef.current.close();
-      if (holisticRef.current) holisticRef.current.close();
     };
-  }, [showLms]);
 
-  return React.createElement('div', null,
-    React.createElement('h1', null, 'Live Transcription'),
-    React.createElement('div', {id: 'container'},
-      React.createElement('video', {ref: videoRef, autoPlay: true, playsInline: true}),
-      React.createElement('canvas', {ref: canvasRef, width: 320, height: 240})
-    ),
-    React.createElement('p', null, 'Status: ' + status),
-    loading ? React.createElement('p', null, 'Transcribing...') : null,
-    error ? React.createElement('p', {style: {color: 'red'}}, error) : null,
-    React.createElement('p', null, transcript),
-    React.createElement('label', null,
-      React.createElement('input', {type: 'checkbox', checked: showLms,
-        onChange: e => setShowLms(e.target.checked)}),
-      ' Show landmarks'
-    )
-  );
-}
+    // Start webcam by default
+    useEffect(() => {
+      navigator.mediaDevices.getUserMedia({video: true})
+        .then(stream => {
+          videoRef.current.srcObject = stream;
+          setupRecorder(stream);
+        })
+        .catch(err => setError('Camera error: ' + err.message));
+    }, []);
 
-ReactDOM.render(React.createElement(App), document.getElementById('root'));
-</script>
+    const handleFile = e => {
+      const file = e.target.files[0];
+      if (!file) return;
+      if (recorderRef.current) recorderRef.current.stop();
+      videoRef.current.srcObject = null;
+      videoRef.current.src = URL.createObjectURL(file);
+      videoRef.current.onloadedmetadata = () => {
+        videoRef.current.play();
+        const stream = videoRef.current.captureStream();
+        setupRecorder(stream);
+      };
+    };
+
+    return React.createElement('div', null,
+      React.createElement('h1', null, 'Live Transcription'),
+      React.createElement('video', {ref: videoRef, autoPlay: true, controls: true, playsInline: true}),
+      React.createElement('div', null,
+        React.createElement('input', {type: 'file', accept: 'video/*', onChange: handleFile})
+      ),
+      React.createElement('p', null, 'Status: ' + status),
+      loading ? React.createElement('p', null, 'Transcribing...') : null,
+      error ? React.createElement('p', {style: {color: 'red'}}, error) : null,
+      React.createElement('p', null, transcript)
+    );
+  }
+
+  ReactDOM.render(React.createElement(App), document.getElementById('root'));
+  </script>
 </body>
 </html>
+
